--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<body>
 
 		<div style="width: 100%; height: 100%; display: none; z-index: 10000; position: absolute;" id="overeverest">
+			<div style="top:70px; left:600px; z-index: 10002; position: absolute; font-size: xx-large"><h2>Objectif: 8830 m</h2></div>
+			<div style="top:300px; left:1200px; z-index: 10003; position: absolute; font-size: xx-large"><h2>Gravis: <span id="counter">4500,32</span> m</h2></div>
 			<div style="width: 100%; height: 100%; z-index: 10001; position: absolute;"><img src="img/fond-everest.png" /></div>
 			<div id="everest_back" style="background-color: #0F0; margin-top:165px; height: 660px; width: 100%; margin-right:auto; margin-left: auto;">
 				<div id="everest_front" style="background-color: #F00; height: 100%; margin-right:auto; margin-left: auto;"></div>
@@ -21,7 +23,7 @@
 				<section data-autoslide="2000" data-background="img/fond.jpg">
 					<h1>La Jolie Douche</h1>
 					<p>
-						<img src="img/lajoliedouche.jpg" />
+						<video data-autoplay src="img/video1.mp4"></video>
 					</p>
 					<h3>Welcome to the PIC 1800 !</h3>
 				</section>
@@ -84,7 +86,22 @@
 				if(event.indexh == 2) {
 					$("#overeverest").show();
 				    $("#everest_front").height("100%");
-				    setTimeout(function() { $("#everest_front").animate({height: "50%", easing: "ease-in"}, 3000); }, 1500);
+				    $('#counter').text(Math.ceil(0)/100);
+				    setTimeout(function() { 
+				    	$("#everest_front").animate({height: "50%", easing: "ease-in"}, 5000); 
+					    var val=450032;
+						jQuery({someValue: 0}).animate({someValue: val}, {
+							duration: 5000,
+							easing:'swing', // can be anything
+							step: function() { // called on every step
+								// Update the element's text with rounded-up value:
+								$('#counter').text(Math.ceil(this.someValue)/100);
+							},
+							complete: function() {
+								$('#counter').text(Math.ceil(val)/100);
+							}
+						});
+					}, 1000);
 				}
 
 				if(event.indexh == 3 || event.indexh == 0) {
