--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<body>
 
 		<div style="width: 100%; height: 100%; display: none; z-index: 10000; position: absolute;" id="overeverest">
-			<div style="top:70px; left:600px; z-index: 10002; position: absolute; font-size: xx-large"><h2>Objectif: 8830 m</h2></div>
-			<div style="top:300px; left:1200px; z-index: 10003; position: absolute; font-size: xx-large"><h2>Gravis: <span id="counter">4500,32</span> m</h2></div>
-			<div style="width: 100%; height: 100%; z-index: 10001; position: absolute;"><img src="img/fond-everest.png" /></div>
-			<div id="everest_back" style="background-color: #0F0; margin-top:165px; height: 660px; width: 100%; margin-right:auto; margin-left: auto;">
-				<div id="everest_front" style="background-color: #F00; height: 100%; margin-right:auto; margin-left: auto;"></div>
+			<div style="top:2%; right:53%; z-index: 10002; position: absolute; font-size: 200%;"><h2>Objectif: 8830 m</h2></div>
+			<div style="top:25%; right:10%; z-index: 10003; position: absolute; font-size: 200%;"><h2>Gravis: <span id="counter">4500,32</span> m</h2></div>
+			<div style="width: 100%; height: 100%; z-index: 10001; position: absolute;"><img src="img/fond-everest.png" style="width: 100%; height: 100%;"/></div>
+			<div id="everest_back" style="background-color: #83a4c3; background: url('img/douche.png'); background-repeat:repeat; background-size:50px 50px; margin-top:7.5%; height: 61.5%; width: 100%; margin-right:auto; margin-left: auto;">
+				<div id="everest_front" style="background-color: #83a4c3; height: 100%; margin-right:auto; margin-left: auto;"></div>
 			</div>
 		</div>
 		<div class="reveal">
