--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 
-		<div style="width: 100%; height: 100%; display: none; z-index: 10000; position: absolute;" id="overeverest">
+		<div style="width: 100%; height: 100%; display: none; z-index: 10000; background-color: #83a4c3; position: absolute;" id="overeverest">
 			<div style="top:2%; right:53%; z-index: 10002; position: absolute; font-size: 200%;"><h2>Objectif: 8830 m</h2></div>
 			<div style="top:25%; right:10%; z-index: 10003; position: absolute; font-size: 200%;"><h2>Gravis: <span id="counter">4500,32</span> m</h2></div>
 			<div style="width: 100%; height: 100%; z-index: 10001; position: absolute;"><img src="img/fond-everest.png" style="width: 100%; height: 100%;"/></div>
