--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 
 		<div style="width: 100%; height: 100%; display: none; z-index: 10000; background-color: #83a4c3; position: absolute;" id="overeverest">
-			<div style="top:2%; right:53%; z-index: 10002; position: absolute; font-size: 200%;"><h2>Objectif: 8830 m</h2></div>
+			<div style="top:2%; right:53%; z-index: 10002; position: absolute; font-size: 200%;"><h2>Objectif: 8000 m</h2></div>
 			<div style="top:25%; right:10%; z-index: 10003; position: absolute; font-size: 200%;"><h2>Gravis: <span id="counter">4500,32</span> m</h2></div>
 			<div style="width: 100%; height: 100%; z-index: 10001; position: absolute;"><img src="img/fond-everest.png" style="width: 100%; height: 100%;"/></div>
 			<div id="everest_back" style="background-color: #83a4c3; background: url('img/douche.png'); background-repeat:repeat; background-size:50px 50px; margin-top:7.5%; height: 61.5%; width: 100%; margin-right:auto; margin-left: auto;">
@@ -20,12 +20,11 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides" >
-				<section data-autoslide="2000" data-background="img/fond.jpg">
-					<h1>La Jolie Douche</h1>
-					<p>
-						<video data-autoplay src="img/video1.mp4"></video>
-					</p>
+				<section data-autoslide="4500" data-background="img/fond.jpg">
 					<h3>Welcome to the PIC 1800 !</h3>
+					<p>
+						<video data-autoplay src="img/video1.mov" width="912px" height=""></video>
+					</p>
 				</section>
 
 				<section data-background="img/fond.jpg">
@@ -81,15 +80,20 @@
 					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
 				]
 			});
-
+			var val;
 			Reveal.addEventListener( 'slidechanged', function( event ) {
+				if(event.indexh == 1) {
+					$.get( "payutc.php", function( data ) {
+					   val=parseInt(data);
+					}, "json");
+				}
+
 				if(event.indexh == 2) {
 					$("#overeverest").show();
 				    $("#everest_front").height("100%");
 				    $('#counter').text(Math.ceil(0)/100);
 				    setTimeout(function() { 
-				    	$("#everest_front").animate({height: "50%", easing: "ease-in"}, 5000); 
-					    var val=450032;
+				    	$("#everest_front").animate({height: (100-(val/8000))+"%", easing: "ease-in"}, 5000); 
 						jQuery({someValue: 0}).animate({someValue: val}, {
 							duration: 5000,
 							easing:'swing', // can be anything
@@ -107,7 +111,13 @@
 				if(event.indexh == 3 || event.indexh == 0) {
 			    	$("#overeverest").hide();
 				}
-			} );
+
+			});
+
+			// Petit bug au premier affichage de la première slide, l'autoplay de reveal marche pas...
+			// Du coup on le fait a la main.
+			var v = document.getElementsByTagName("video")[0];
+			v.play();
 		</script>
 	</body>
 </html>
