--- a/index.html
+++ b/index.html
@@ -29,23 +29,19 @@
 
 				<section data-background="img/fond.jpg">
 					<div style="top:-300px; position:absolute; "><h2>Twitter, hashtag #PicassoUTC</h2></div>
-					<section data-autoslide="3000" data-background="img/fond.jpg">
+					<section data-autoslide="10000" data-background="img/fond.jpg">
 						<p>Envoyez vos messages avec le hashtag #PicassoUTC, voici les 10 derniers messages !</p>
 					</section>
-					<section data-autoslide="3000">
-						<p>
-							@mattgu74: C'est trop FAT à la #FolieDouche au #PicassoUTC ! Envoyez la peuf !
-						</p>
-					</section>
-					<section data-autoslide="3000">
-						<p>
-							@Jonas: Oép @mattgu74 t'a trop raison ça envoie du lourd au #PicassoUTC avec la #FolieDouche !
-						</p>
+					<section>
+					<p>
+					       <img id="profile" width="48px" height="48px" style="border: 0px;" />
+					       <span id="username"></span> (@<span id="login"></span>): <span id="texte"></span><br />
+
+					</p>
 					</section>
 				</section>
 
-				<section data-autoslide="10000">
-				</section>
+				<section></section>
 			</div>
 
 		</div>
@@ -80,9 +76,31 @@
 					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
 				]
 			});
-			var val;
+			var val, tweets;
+
+			function read_tweet() {
+				if(tweets.length == 0) { Reveal.next(); return; }
+				var tweet = tweets.splice(0,1)[0];
+				$("#username").text(tweet.user.name);
+				$("#login").text(tweet.user.screen_name);
+				$("#texte").text(tweet.text);
+				$("#profile").attr("src", tweet.user.profile_image_url);
+				console.log(tweet);
+				setTimeout(read_tweet, 4000);
+			}
+
 			Reveal.addEventListener( 'slidechanged', function( event ) {
-				if(event.indexh == 1) {
+				if(event.indexh == 1 && event.indexv == 0) {
+					tweets = [];
+					$.get( "twitter.php", function( data ) {
+						console.log(data);
+					   for(var i=data.statuses.length-1; i>=0; i--) {
+					   		tweets.push(data.statuses[i]);
+					   }
+					   read_tweet();
+					   Reveal.next();
+					}, "json");
+
 					$.get( "payutc.php", function( data ) {
 					   val=parseInt(data);
 					}, "json");
