--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 						<p>Envoyez vos messages avec le hashtag #PicassoUTC, voici les 10 derniers messages !</p>
 					</section>
 					<section style="height: 700px;">
-					<p style="margin-top:50px; margin-bottom:auto;>
+					<p style="margin-top:auto; margin-bottom:auto;">
 					       <img id="profile" width="48px" height="48px" style="border: 0px;" />
 					       <span id="username"></span> (@<span id="login"></span>): <span id="texte"></span>
 					</p>
-					<img id="twittimage" width="640px" height="480px" style="border: 0px; position:aboslute;" />
+					<img id="twittimage" height="480px" style="border: 0px; position:aboslute;" />
 					</section>
 				</section>
 
-				<section  data-autoslide="10000"></section>
+				<section data-autoslide="10000"></section>
 			</div>
 
 		</div>
