--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					</section>
 					<section style="height: 700px;">
 					<p style="margin-top:auto; margin-bottom:auto;">
-					       <img id="profile" width="48px" height="48px" style="border: 0px;" />
+					       <img id="profile" width="48px" height="48px" style="border: 0px; padding-top:30px;" />
 					       <span id="username"></span> (@<span id="login"></span>): <span id="texte"></span>
 					</p>
 					<img id="twittimage" height="480px" style="border: 0px; position:aboslute;" />
