--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 	</head>
 	<body>
 
-		<div style="width: 100%; height: 100%; display: none; z-index: 10000; background-color: #83a4c3; position: absolute;" id="overeverest">
+		<div style="width: 100%; height: 100%; display: none; z-index: 10000; background-color: #8EaFcE; position: absolute;" id="overeverest">
 			<div style="top:2%; right:53%; z-index: 10002; position: absolute; font-size: 200%;"><h2>Objectif: 8000 m</h2></div>
 			<div style="top:25%; right:10%; z-index: 10003; position: absolute; font-size: 200%;"><h2>Gravis: <span id="counter">4500,32</span> m</h2></div>
 			<div style="width: 100%; height: 100%; z-index: 10001; position: absolute;"><img src="img/fond-everest.png" style="width: 100%; height: 100%;"/></div>
-			<div id="everest_back" style="background-color: #83a4c3; background: url('img/douche.png'); background-repeat:repeat; background-size:50px 50px; margin-top:7.5%; height: 61.5%; width: 100%; margin-right:auto; margin-left: auto; border-width:1px;
- border-style:solid;
- border-color:black;">
+			<div id="everest_back" style="background-color: #83a4c3; background: url('img/douche.png'); background-repeat:repeat; background-size:50px 50px; margin-top:7.5%; height: 61.5%; width: 100%; margin-right:auto; margin-left: auto; border-width:1px; ">
 				<div id="everest_front" style="background-color: #83a4c3; height: 100%; margin-right:auto; margin-left: auto;"></div>
 			</div>
 		</div>
@@ -36,7 +34,7 @@
 					</section>
 					<section style="height: 700px;">
 					<p style="margin-top:auto; margin-bottom:auto;">
-					       <img id="profile" width="48px" height="48px" style="border: 0px;" />
+					       <img id="profile" width="96px" height="96px" style="border: 0px;" />
 					       <span id="username"></span> (@<span id="login"></span>): <span id="texte"></span>
 					</p>
 					<img id="twittimage" height="480px" style="border: 0px; position:aboslute;" />
