--- a/index.html
+++ b/index.html
@@ -34,9 +34,14 @@
 					</section>
 					<section style="height: 700px;">
 					<table border="0">
-					       <tr>
-						<td><img id="profile" width="96px" height="96px" style="border: 0px; padding-top:30px;" />
-					       </td><td><span id="username"></span> (@<span id="login"></span>): <span id="texte"></span></td>
+					    <tr>
+						<td>
+						    <span id="username"></span> <br />
+						    <img id="profile" width="96px" height="96px" style="border: 0px;" /> <br />
+						    @<span id="login"></span>
+					    </td>
+					    <td>
+					        <span id="texte"></span></td>
 						</tr>
 					</table>
 					<img id="twittimage" height="480px" style="border: 0px; position:aboslute;" />
