--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
 				</section>
 
 				<section data-autoslide="10000"></section>
+				
+				<section data-autoslide="4500" data-background="img/fond.jpg">
+					<h3>#MaBranche Represent !</h3>
+					<p>Vote pour ta branche en commandant au bar, (1cts€/vote), les bénéfices seront reversés à une association humanitaire</p>
+					<table>
+				        <tr><td>#1</td><td><span id="rk_br1" /></td><td><span id="rk_v1" /> Votes</td></tr>
+				        <tr><td>#2</td><td><span id="rk_br2" /></td><td><span id="rk_v2" /> Votes</td></tr>
+				        <tr><td>#3</td><td><span id="rk_br3" /></td><td><span id="rk_v3" /> Votes</td></tr>
+				        <tr><td>#4</td><td><span id="rk_br4" /></td><td><span id="rk_v4" /> Votes</td></tr>
+				        <tr><td>#5</td><td><span id="rk_br5" /></td><td><span id="rk_v5" /> Votes</td></tr>
+				        <tr><td>#6</td><td><span id="rk_br6" /></td><td><span id="rk_v6" /> Votes</td></tr>
+				        <tr><td>#7</td><td><span id="rk_br7" /></td><td><span id="rk_v7" /> Votes</td></tr>
+					</table>
+				</section>
 			</div>
 
 		</div>
@@ -105,7 +119,6 @@
 				if(event.indexh == 1 && event.indexv == 0) {
 					tweets = [];
 					$.get("twitter.php", function( data ) {
-						console.log(data);
 					   for(var i=data.statuses.length-1; i>=0; i--) {
 					   		tweets.push(data.statuses[i]);
 					   }
@@ -117,6 +130,26 @@
 					   payutc = data;
 					   console.log(payutc);
 					   val=parseInt(payutc.total);
+					   var table = [
+					        ["GI", payutc.GI],
+					        ["TC", payutc.TC],
+					        ["GSU", payutc.GSU],
+					        ["GM", payutc.GM],
+					        ["GSM", payutc.GSM],
+					        ["GB", payutc.GB],
+					        ["GP", payutc.GP]
+					   ];
+
+                        table.sort(function(a, b) {
+                            a = a[1];
+                            b = b[1];
+
+                            return a < b ? -1 : (a > b ? 1 : 0);
+                        });
+					   for(var i=0; i<table.length; i++) {
+					     $("#rk_br"+(i+1)).text(table[i][0]);
+					     $("#rk_v"+(i+1)).text(table[i][1]);
+					   }
 					}, "json");
 				}
 
