--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<section data-autoslide="4500" data-background="img/fond.jpg">
 					<h3>#MaBranche Represent !</h3>
 					<p>Vote pour ta branche en commandant au bar, (1cts€/vote), les bénéfices seront reversés à une association humanitaire</p>
-					<table>
+					<table border=1 width="100%">
 				        <tr><td>#1</td><td><span id="rk_br1" /></td><td><span id="rk_v1" /> Votes</td></tr>
 				        <tr><td>#2</td><td><span id="rk_br2" /></td><td><span id="rk_v2" /> Votes</td></tr>
 				        <tr><td>#3</td><td><span id="rk_br3" /></td><td><span id="rk_v3" /> Votes</td></tr>
