--- a/index.html
+++ b/index.html
@@ -55,16 +55,13 @@
 				<section></section>
 				
 				<section data-autoslide="4500" data-background="img/fond.jpg">
-					<h3>#MaBranche Represent !</h3>
-					<p>Vote pour ta branche en commandant au bar, (1cts€/vote), les bénéfices seront reversés à une association humanitaire</p>
+					<h3>Qui a la plus #Grosse ?</h3>
+					<p>Vote au bar (1cts€/vote), les bénéfices seront reversés à une association humanitaire.</p>
 					<table border=1 width="100%">
-				        <tr><td>#1</td><td><span id="rk_br1" /></td><td><span id="rk_v1" /> Votes</td></tr>
-				        <tr><td>#2</td><td><span id="rk_br2" /></td><td><span id="rk_v2" /> Votes</td></tr>
-				        <tr><td>#3</td><td><span id="rk_br3" /></td><td><span id="rk_v3" /> Votes</td></tr>
-				        <tr><td>#4</td><td><span id="rk_br4" /></td><td><span id="rk_v4" /> Votes</td></tr>
-				        <tr><td>#5</td><td><span id="rk_br5" /></td><td><span id="rk_v5" /> Votes</td></tr>
-				        <tr><td>#6</td><td><span id="rk_br6" /></td><td><span id="rk_v6" /> Votes</td></tr>
-				        <tr><td>#7</td><td><span id="rk_br7" /></td><td><span id="rk_v7" /> Votes</td></tr>
+				        <tr><td>#1</td><td><span id="rk_br1" /></td><td><span id="rk_v1" ></span> Votes</td></tr>
+				        <tr><td>#2</td><td><span id="rk_br2" /></td><td><span id="rk_v2" ></span> Votes</td></tr>
+				        <tr><td>#3</td><td><span id="rk_br3" /></td><td><span id="rk_v3" ></span> Votes</td></tr>
+				        <tr><td>#4</td><td><span id="rk_br4" /></td><td><span id="rk_v4" ></span> Votes</td></tr>
 					</table>
 				</section>
 			</div>
@@ -149,13 +146,10 @@
 					   console.log(payutc);
 					   val=parseInt(payutc.total);
 					   var table = [
-					        ["GI", payutc.GI],
 					        ["TC", payutc.TC],
-					        ["GSU", payutc.GSU],
-					        ["GM", payutc.GM],
-					        ["GSM", payutc.GSM],
-					        ["GB", payutc.GB],
-					        ["GP", payutc.GP]
+					        ["GX", payutc.GX],
+					        ["Vieux Cons", payutc.VC],
+					        ["Ancêtres", payutc.AN]
 					   ];
 
                         table.sort(function(a, b) {
