--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides" >
 				<section data-autoslide="4500" data-background="img/fond.jpg">
-										<div style="top:-380px; right: -200px; position:absolute; "><h3>Welcome to the PIC 1800 !</h3>></div>
+					<div style="top:0px; right: 0px; position:absolute; "><h3>Welcome to the PIC 1800 !</h3></div>
 					<p>
 						<video data-autoplay src="img/video1.mov"></video>
 					</p>
