--- a/index.html
+++ b/index.html
@@ -34,18 +34,20 @@
 						<p>Envoyez vos messages avec le hashtag #PicassoUTC, voici les 10 derniers messages !</p>
 					</section>
 					<section style="height: 700px;">
-					<table border="0" style="padding-top: 30px;">
-					    <tr>
-						<td style="text-align:center;">
-						    <span id="username"></span> <br />
-						    <!-- <img id="profile" width="96px" height="96px" style="border: 0px;" /> <br /> -->
-						    @<span id="login"></span>
-					    </td>
-					    <td style="text-align: center; vertical-align: middle;">
-					        <span id="texte"></span></td>
-						</tr>
-					</table>
-					<img id="twittimage" height="480px" style="border: 0px; position:aboslute;" />
+					<div style="height: 700px;">
+					    <table border="0" style="padding-top: 30px;">
+					        <tr>
+						    <td style="text-align:center;">
+						        <span id="username"></span> <br />
+						        <!-- <img id="profile" width="96px" height="96px" style="border: 0px;" /> <br /> -->
+						        @<span id="login"></span>
+					        </td>
+					        <td style="text-align: center; vertical-align: middle;">
+					            <span id="texte"></span></td>
+						    </tr>
+					    </table>
+					    <img id="twittimage" style="border: 0px; position:aboslute;" />
+					</div>
 					</section>
 				</section>
 
