--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 					        <td style="text-align: center; vertical-align: middle;">
 					            <span id="texte"></span></td>
 						    </tr>
+						    <tr><td></td><td><img id="twittimage" style="border:0px;" /></td></tr>
 					    </table>
-					    <img id="twittimage" style="border: 0px; position:aboslute;" />
 					</div>
 					</section>
 				</section>
