--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					</section>
 					<section style="height: 700px;">
 					<div style="height: 700px;">
-					    <table border="0" style="padding-top: 30px;">
+					    <table border="0" style="margin-top:0px; padding-top: 30px;">
 					        <tr>
 						    <td style="text-align:center;">
 						        <span id="username"></span> <br />
