--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 					<section data-autoslide="10000" data-background="img/fond.jpg">
 						<p>Envoyez vos messages avec le hashtag #PicassoUTC, voici les 10 derniers messages !</p>
 					</section>
-					<section style="height: 700px;">
-					<div style="height: 700px;">
+					<section>
+					<div style="">
 					    <table border="0" style="margin-top:0px; padding-top: 30px;">
 					        <tr>
 						    <td style="text-align:center;">
