--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 						<p>Envoyez vos messages avec le hashtag #PicassoUTC, voici les 10 derniers messages !</p>
 					</section>
 					<section>
-					<div style="">
-					    <table border="0" style="margin-top:0px; padding-top: 30px;">
+					<div style="height: 800px;">
+					    <table border="0" style="margin-top:auto; margin-bottom:auto; padding-top: 30px;">
 					        <tr>
 						    <td style="text-align:center;">
 						        <span id="username"></span> <br />
@@ -53,7 +53,7 @@
 
 				<section></section>
 				
-				<section data-autoslide="4500" data-background="img/fond.jpg">
+				<section data-autoslide="9000" data-background="img/fond.jpg">
 					<h3>Qui a la plus #Grosse ?</h3>
 					<p>Vote au bar (1cts€/vote), les bénéfices seront reversés à une association humanitaire.</p>
 					<table border=1 width="100%">
@@ -175,7 +175,7 @@
 					    // Fin du compteur
 					    $("#overeverest").hide();
 					    Reveal.next();
-					}, 6500);
+					}, 8500);
 				}
 
 			});
