--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>ScreenUTC</title>
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/beige.css" id="theme">
+		<link rel="stylesheet" href="css/theme/moon.css" id="theme">
 	</head>
 	<body>
 
@@ -22,10 +22,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides" >
 				<section data-autoslide="4500" data-background="img/fond.jpg">
-					<div style="top:0px; right: 0px; position:absolute; "><h3>Welcome to the PIC 1800 !</h3></div>
-					<p>
-						<video data-autoplay src="img/video1.mov"></video>
-					</p>
+					<h1>Bienvenue au Picasso !</h1>
 				</section>
 
 				<section data-background="img/fond.jpg">
