--- a/index.html
+++ b/index.html
@@ -7,16 +7,6 @@
 		<link rel="stylesheet" href="css/theme/moon.css" id="theme">
 	</head>
 	<body>
-
-		<div style="width: 100%; height: 100%; display: none; z-index: 10000; background-color: #8EaFcE; position: absolute;" id="overeverest">
-			<div style="top:2%; right:53%; z-index: 10002; position: absolute; font-size: 200%;"><h2>Objectif: 8848 m</h2></div>
-			<div style="top:25%; right:10%; z-index: 10003; position: absolute; font-size: 200%;"><h2>Gravis: <span id="counter">0</span> m</h2></div>
-			<div style="width: 100%; height: 100%; z-index: 10001; position: absolute;"><img src="img/fond-everest.png" style="width: 100%; height: 100%;"/></div>
-			<div id="everest_back" style="background-color: #83a4c3; background: url('img/douche.png'); background-repeat:repeat; background-size:50px 50px; margin-top:7.5%; height: 61.5%; width: 100%; margin-right:auto; margin-left: auto; border-width:1px; ">
-				<div id="everest_front" style="background-color: #83a4c3; height: 100%; margin-right:auto; margin-left: auto;"></div>
-			</div>
-		</div>
-		
 		<div class="reveal">
 
 			<!-- Any section element inside of this container is displayed as a slide -->
@@ -47,8 +37,10 @@
 					</div>
 					</section>
 				</section>
-
-				<section></section>
+				<section data-background="img/fond.jpg">
+					<h2>Compteur !</h2>
+					<span id="counter"></span> €
+				</section>
 			</div>
 
 		</div>
@@ -124,11 +116,8 @@
 				}
 
 				if(event.indexh == 2) {
-					$("#overeverest").show();
-				    $("#everest_front").height("100%");
 				    $('#counter').text(Math.ceil(0)/100);
 				    setTimeout(function() { 
-				    	$("#everest_front").animate({height: (100-(val/8000))+"%", easing: "ease-in"}, 5000); 
 						jQuery({someValue: 0}).animate({someValue: val}, {
 							duration: 5000,
 							easing:'swing', // can be anything
@@ -142,8 +131,6 @@
 						});
 					}, 1000);
 					setTimeout(function() {
-					    // Fin du compteur
-					    $("#overeverest").hide();
 					    Reveal.slide(0);
 					}, 8500);
 				}
