--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides" >
-				<section data-autoslide="4500" data-background="img/fond.jpg">
+				<section data-autoslide="4500">
 					<h1>Bienvenue au Picasso !</h1>
 				</section>
 
-				<section data-background="img/fond.jpg">
+				<section>
 					<div style="top:-380px; right: -200px; position:absolute; "><h2>Twitter, hashtag #PicassoUTC</h2></div>
-					<section data-autoslide="10000" data-background="img/fond.jpg">
+					<section data-autoslide="10000">
 						<p>Envoyez vos messages avec le hashtag #PicassoUTC, voici les 10 derniers messages !</p>
 					</section>
 					<section>
@@ -37,7 +37,7 @@
 					</div>
 					</section>
 				</section>
-				<section data-background="img/fond.jpg">
+				<section>
 					<h2>Compteur !</h2>
 					<span id="counter"></span> €
 				</section>
